syntax = "proto3"; 

//com.sk.weichat.socket.protocol
option java_package = "com.sk.weichat.socket.protocol";//写的是生成文件的包名

//option java_package = "com.chat.imserver.common.proto";//写的是生成文件的包名


option java_outer_classname = "MessageProBuf";//生成的类文件名 

package Message;

//required optional  repeated
	
//消息 数据
message MessageHead
{

	/**
	 *发送者;
	 */
	 string from = 1;
	/**
	 * 接受者;
	 */
	 string to = 2;
	
	/**
	 * 消息id
	 * 
	 */
	 string messageId = 3;
	
	/**
	 * 聊天类型;(单聊,群聊)
	 */
	 int32 chatType = 4;
	/**
	 *是否离线消息   true 离线消息
	 */
	 //bool offline = 5;
	
}



//消息的 body 
message ChatMessage
{
	 MessageHead messageHead=1;

	/**
     * 业务发送者
     */
	 string fromUserId = 2;

	/**
     *发送者用户名
     */
	 string fromUserName= 3;

	/**
     * 业务接受者
     */
	 string toUserId= 4;
	/**
     * 接受者用户名
     */
	 string toUserName= 5;
	/**
	 * 
	 * 消息发送时间
	 */
	 int64 timeSend= 6;
	
	/**
	 * 消息类型;
	 */
	 int32 type= 7;
	
	/**
	 * 消息内容;
	 */
	 string content=8;
	
	/**
	 * 消息发到哪个群组;
	 */
	 string objectId=9;
	
	 string fileName=10;


	 /**
	  * 是否加密传输;
	  */
	 bool isEncrypt=11;
	 
	 int64 deleteTime=12;
	 /**
      * 是否阅后即焚
      */
	 bool isReadDel=13;
	 /**
      * 文件大小 单位字节
      */
	 int64 fileSize=14;
	  /**
       * 文件播放时长  录音时长，视频时长
       */
	 int64 fileTime=15;
	/**
    * 1.当为地理位置时，有效 2.特殊：当为图片时，该值为图片的宽度
    */
	//
	double location_x=16;
	/**
    * 1.当为地理位置时，有效 2.特殊：当为图片时，该值为图片的高度
    */
	double location_y=17;

	 /**
	  * 加密类型;
	  */
	int32 encryptType=18;

	 /*
	 *消息验签字段
	 */
	string signature=19;

	 /*
     *907 传递信息
	 */
	string other=20;

    /**
      * 消息子类型
      */
    int32 subType=21;

     /**
      * 消息序列号
      */
    int64 seqNo=22;

     /**
      * 客服消息 客服ID
      */
    int64 srvId=23;

	 /**
     * 扩展字段;
     */
	//map<string, string> values =19;
	 
}


 /**
 * 单聊离线消息;
 */
message OffChatMessage
{
	 MessageHead messageHead=1;
	/**
     * 业务发送者
     */
	 string fromUserId = 2;
	/**
     *发送者用户名
     */
	 string fromUserName= 3;
	/**
     * 业务接受者
     */
	 string toUserId= 4;
	/**
     * 接受者用户名
     */
	 string toUserName= 5;
	/**
	 *
	 * 消息发送时间
	 */
	 int64 timeSend= 6;

	/**
	 * 消息类型;
	 */
	 int32 type= 7;

	/**
	 * 消息内容;
	 */
	 string content=8;

	/**
	 * 消息发到哪个群组;
	 */
	 string objectId=9;

	 string fileName=10;


	 /**
	  * 是否加密传输;
	  */
	 bool isEncrypt=11;

	 int64 deleteTime=12;
	 /**
      * 是否阅后即焚
      */
	 bool isReadDel=13;
	 /**
      * 文件大小 单位字节
      */
	 int64 fileSize=14;
	  /**
       * 文件播放时长  录音时长，视频时长
       */
	 int64 fileTime=15;
	/**
    * 1.当为地理位置时，有效 2.特殊：当为图片时，该值为图片的宽度
    */
	//
	double location_x=16;
	/**
    * 1.当为地理位置时，有效 2.特殊：当为图片时，该值为图片的高度
    */
	double location_y=17;

	 /**
	  * 加密类型;
	  */
	int32 encryptType=18;

	 /*
	 *消息验签字段
	 */
	string signature=19;

	 /*
     *907 传递信息
	 */
	string other=20;

    /**
      * 消息子类型
      */
    int32 subType=21;

     /**
      * 消息序列号
      */
    int64 seqNo=22;

     /**
      * 客服消息 客服ID
      */
      int64 srvId=23;


	/**
     *是否离线消息结束
     */
     bool offend = 24;

}




/**
 * 登陆授权消息
*/
message AuthMessage
{
	 MessageHead messageHead=1;
	
	 string token = 2;
	 
	 string password = 3;

	 string deviceId =4;

	 int32 version=5;

	 string apiKey=6;

     string appName=7;

     string companyName=8;

     string secret=9;

}

/**
 * 登陆授权消息结果
*/
message AuthRespMessageProBuf
{
	 MessageHead messageHead=1;
	
	/**
	 * 登陆结果  1 登陆 成功     0 登陆失败   
	 */
	int32  status=2;
	
	/*
	 * 提示信息
	 */
	string arg=3;
	
	string token=4;
	
	string resources=5;

	int32 version=6;

	string mcode=7;

	string apiKey=8;

    string appName=9;

    string companyName=10;

}
/**
 * 消息回执
*/
message MessageReceiptStatusProBuf
{
	 MessageHead messageHead=1;
	
	/**
	 *   0  发送中     1  到达服务器 
	 *    2 已接收   3 已读
	 */
	int32  status=2;
	
	/*
	 * 提示信息
	 */
	string messageId=3;
	
	
	
}


/**
 * 加入群组消息
*/
message JoinGroupMessageProBuf
{
	 MessageHead messageHead=1;
	
	 string jid = 2;
	 
	 int64 seconds = 3;
}


message ExitGroupMessageProBuf
{
	 MessageHead messageHead=1;
	
	 string jid = 2;
	 
}

/**
 * 群组协议结果
*/
message GroupMessageRespProBuf
{
	 MessageHead messageHead=1;
	
	string jid = 2;
	 /**
	 * 1     成功
	 * -1  失败
	 */
	int32  status=3;
	 /**
	 * 是否退出群组协议
	 */
	bool isExit=4;
}
/**
 * 漫游聊天记录
*/
message PullMessageHistoryRecordReqProBuf
{
	 MessageHead messageHead=1;
	
	 string jid = 2;
	 /**
	 * 请求数量
	 */
	 int32 size = 3;
	 /**
	 * 开始时间
	 */
	 int64 startTime = 4;
	 /**
	 * 结束时间
	 */
	 int64 endTime = 5;
}

/**
 * 漫游聊天记录  结果
*/
message PullMessageHistoryRecordRespProBuf
{
	 /**
	  * 请求ID 标识
	 */
	 string messageId = 1;
	
	 string jid = 2;
	 /**
	 * 
	 */
	 int32 chatType = 3;
	 
	 
	 repeated ChatMessage messageList = 4;
	 /**
	 * 消息总数
	 */
	 int32 count = 5;

}
/**
 * 批量拉取群组消息数量
*/
message PullBatchGroupMessageReqProBuf
{
	 MessageHead messageHead=1;
	/**
	 * jid 群组jid   lastTime 群组的最后一条消息时间
	 * 群组数据集合["jid1,lastTime","jid2,lastTime"]
	 */
	 repeated string jidList = 2;
	 /**
	 *拉取消息的截止时间
	 */
	 int64 endTime = 3;
}

/**
 * 批量拉取群组消息数量   及最后几条消息  结果   (单个群组的)
*/
message PullGroupMessageRespProBuf
{	
    /**
	  * 请求ID 标识
	 */
	 string messageId = 1;
	/**
	 *群组jid
	 */
	 string jid=2;
	 /**
	 *群组消息数量
	 */
	 int64 count = 3;
	 /**
	  *消息集合
	 */
	 repeated OffChatMessage messageList = 4;

}


message RoomMsgReadMessage{
	/**
	 * 群消息头
	 */
	MessageHead messageHead=1;
	/**
  * 群组JID
  */
	string jid = 2;

	/**
   * 用户已读消息列表
   * userId:messageId;userId:messageId;
   */
	string content = 3;
}


//心跳协议
message PingMessageProBuf
{
     MessageHead messageHead=1;
}


message CommonSuccessProBuf
{
    MessageHead messageHead=1;
     /**
      * 消息序列号
      */
    int64 seqNo=2;
}

//错误协议
message CommonErrorProBuf
{
	  MessageHead messageHead=1;
	  int32 code = 2;
	  string arg = 3; //错误参数，格式：xx,xxx,xxxx
}

message ServerReqMessageProBuf
{

	  int32 type = 1;//服务器消息类型
	  string content = 2;
}












